# projetoMeuRobo

./: .env.example  .gitignore  INSTRUCOES_INICIAR_ROBO.txt  README.md  pyproject.toml
database/: 001_create_initial_schema.sql  002_add_job_extracted_content.sql  003_add_job_ai_evaluation.sql  004_add_match_mode_to_titulos_busca.sql  005_create_linkedin_search_config.sql
src/meu_robo/: config.py  db.py
src/meu_robo/repositories/: execucoes_repository.py  linkedin_config_repository.py  localidades_repository.py  titulos_repository.py  vagas_repository.py
src/meu_robo/robo/: filtros_vagas.py  indeed_collector.py  linkedin_collector.py
src/meu_robo/services/: classificador_vagas_service.py  export_service.py
src/meu_robo/web/: app.py
src/meu_robo/web/static/: styles.css
src/meu_robo/web/templates/: base.html  index.html  vagas.html
tests/: test_classificador_vagas_service.py  test_filtros_vagas.py
