[project]
name = "projeto-meu-robo"
version = "0.1.0"
description = "Robo local para coletar vagas e acompanhar candidaturas"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "playwright>=1.49.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
meu-robo-web = "meu_robo.web.app:main"
meu-robo-linkedin = "meu_robo.robo.linkedin_collector:main"
